# TI-S4-Subpar

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: LoRaMesh_vs_LoRaWAN_presentatie.pptx  Lora_mesh_achtergrondrappord.md  project_outline.md
docs/Leerdoelen/: Leerdoelen.md  Plan voor Leerdoelen.md  Verantwoordingsdocument P1.md  Verantwoordingsdocument.md
docs/Leerdoelen/LD-1 Analyseren/: LD-1.md
docs/Leerdoelen/LD-2 Ontwerpen/: LD-2.md
docs/Leerdoelen/LD-3 Adviseren/: LD-3.md
docs/Leerdoelen/LD-4 Realiseren/: LD-4.md
docs/Leerdoelen/LD-5 Beheren/: LD-5.md
docs/Leerdoelen/LD-6 Toekomstgericht organiseren/: LD-6.md
docs/Leerdoelen/LD-7 Doelgericht interacteren/: LD-7.md
docs/Leerdoelen/LD-8 Persoonlijk leiderschap/: LD-8.md
docs/Leerdoelen/LD-9 Onderzoek probleem oplossen/: LD-9.md
docs/Leerdoelen/oud/: Plan voor Leerdoelen.md
docs/Sprints/1/: Sprint_1_planning.md  Sprint_1_sprintverslag.md
docs/Sprints/1/Standups/: 03-03.md  04-03.md  10-03.md  11-03.md  17-03.md  18-03.md
docs/Sprints/2/: Sprint_2_planning.md  Sprintverslag_2.md
docs/Sprints/2/Standups/: 24-03.md  25-03.md  31-03.md
docs/Sprints/3/: Sprint_3_planning.md
docs/Sprints/3/Standups/: 07-04.md  08-04.md  15-04.md
docs/Sprints/4/Standups/: 10-06.md  11-06.md
docs/Sprints/5/: 17-06.md  18-06.md  19-06.md  Sprint_5_planning.md
docs/Verslagen/: 0. Inleiding.md  1. Requirement Analyse.md  2. Systeem Design.md  3. Architectuur Design.md  4. Module Design.md  5. Coderen.md  6. Unit Testen.md  7. Integratie Testen.md  8. Systeem Testen.md  9. Acceptatie Testen.md  Contract.md  Ontwikkeldocument.md  Reflectieverslag.md  V-Model.md  Voorbereiding Evaluatiegesprek.md
subpar/: buoyant.sdf
subpar/simulator/: CMakeLists.txt
subpar/simulator/control/: keyboardcontrol.py
subpar/simulator/models/: ground_plane.sdf
subpar/simulator/models/subpar_drone/: body.sdf  model.config  model.sdf
subpar/simulator/models/subpar_drone/motors/: motor_module_1.sdf  motor_module_2.sdf  motor_module_3.sdf  motor_module_4.sdf
subpar/simulator/models/underwater/: underwater_models.sdf
subpar/simulator/plugins/: GuiPlugin.cc  HelloUnderwaterPlugin.cc  SubparDronePlugin.cc  SubparKeyGuiPlugin.cc  SubparKeyGuiPlugin.hpp  SubparKeyGuiPlugin.qml  SubparKeyGuiPlugin.qrc  SubparKeyInputPlugin.cc  SubparStabilizerPlugin.cc
subpar/simulator/subscriber/: subscriber.cc
subpar/simulator/worlds/: start_world_with_cam.sdf  starter_world.sdf
subpar/transport_tutorial/: CMakeLists.txt  publisher.cc  subscriber.cc
subpar/voorbeeld_model/worlds/: buoyant_lrauv.sdf
